<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.example</groupId>
	<artifactId>magma</artifactId>
	<version>0.1.0-SNAPSHOT</version>

	<properties>
		<maven.compiler.release>22</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.jupiter.version>5.9.3</junit.jupiter.version>
		<!-- Allow skipping CPD checks via -Dcpd.skip=true -->
		<cpd.skip>false</cpd.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>22</release>
				</configuration>
			</plugin>
			<!-- Run the Java-file-count check script during validate; non-zero exit fails the build -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>check-java-file-count</id>
						<phase>validate</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<!-- Use python in PATH; CI should provide it. The script returns non-zero on
							violations -->
							<executable>python</executable>
							<arguments>
								<argument>${project.basedir}/scripts/check_java_files.py</argument>
								<!-- Fail build if the script exits non-zero (default behavior of exec plugin) -->
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.20.0</version>
				<configuration>
					<!-- Configure CPD (copy-paste detector) -->
					<minimumTokens>30</minimumTokens>
				</configuration>
				<executions>
					<execution>
						<id>cpd-check</id>
						<phase>test</phase>
						<goals>
							<goal>cpd-check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<useModulePath>false</useModulePath>
					<!-- JUnit Platform parallel execution settings -->
					<configurationParameters>
						junit.jupiter.execution.parallel.enabled=true
						junit.jupiter.execution.parallel.mode.default=concurrent
						junit.jupiter.execution.parallel.mode.classes.default=concurrent
						junit.jupiter.execution.parallel.config.strategy=fixed
						junit.jupiter.execution.parallel.config.fixed.parallelism=16
					</configurationParameters>
				</configuration>
			</plugin>
			<!-- Checkstyle plugin: uses config/checkstyle/checkstyle.xml -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>generate-checkstyle-report</id>
						<!-- Run during verify to avoid failing 'mvn test' runs; use the report-generating goal -->
						<phase>test</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>config/checkstyle/checkstyle.xml</configLocation>
					<encoding>${project.build.sourceEncoding}</encoding>
					<consoleOutput>true</consoleOutput>
					<!-- Do not fail the build automatically on first run; enable later when configured -->
					<failOnViolation>true</failOnViolation>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>